# smri-fm

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
datasets/openneuro/: README.md
datasets/openneuro/metadata/: openneuro_exclude_datasets.yaml  openneuro_include_filelist.txt  openneuro_participants.csv
datasets/openneuro/scripts/: data_curation.ipynb  index_images.py  index_participants.py
experiments/registration_testing/: README.md  analysis.ipynb  run.sh
experiments/synthseg_ridge_baseline/: README.md
scripts/: eval_fomo26.sh  preprocess.sbatch  setup_asparagus_env.sh
src/asparagus_bridge/: README.md  asparagus_quickfixes.md  models_smri_mae.py
src/asparagus_bridge/configs/finetuning/: smoke_test_bag.yaml
src/asparagus_bridge/configs/model/: smri_mae.yaml
src/data/: mri_data.py
src/preprocessing/: README.md
src/smri_fm/: preprocess.py
src/smri_mae/: main_pretrain.py  model_mae.py  utils.py  visualization.py
src/smri_mae/config/: default_pretrain.yaml
