[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "smri-fm"
dynamic = ["version"]
description = "MedARC sMRI foundation model"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "antspyx",
    "einops",
    "huggingface-hub",
    "ipython",
    "jaxtyping",
    "jupyter",
    "matplotlib",
    "nibabel",
    "numpy",
    "omegaconf",
    "pandas",
    "pre-commit",
    "pytest",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tabulate",
    "templateflow",
    "timm",
    "torch==2.8.0",
    "torchvision",
    "tqdm",
    "wandb",
    "mosaicml-streaming",
    "asparagus",
]

[tool.uv.sources]
asparagus = { path = "third_party/asparagus", editable = true }

[tool.uv]
override-dependencies = [
    "torch==2.8.0",
    "torchvision",
    "huggingface-hub<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/_version.py"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F722"]
